--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Forgotten tales</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <title>Realm of Eldoria</title>
+    <link rel="shortcut icon" href="TemplateData/Vixie.png">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
@@ -18,9 +18,8 @@
       </div>
       <div id="unity-warning"> </div>
       <div id="unity-footer">
-        <div id="unity-webgl-logo"></div>
-        <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Forgotten tales</div>
+        <button id="unity-fullscreen-button" title="Click me to play in fullscreen!"></button>
+        <div id="unity-build-title">2009-901 | Realm of Eldoria</div>
       </div>
     </div>
     <script>
