--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Realm of Eldoria</title>
-    <link rel="shortcut icon" href="TemplateData/Vixie.png">
+    <title>Unity WebGL Player | RealmOfEldoria</title>
+    <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
@@ -18,8 +18,9 @@
       </div>
       <div id="unity-warning"> </div>
       <div id="unity-footer">
-        <button id="unity-fullscreen-button" title="Click me to play in fullscreen!"></button>
-        <div id="unity-build-title">2009-901 | Realm of Eldoria</div>
+        <div id="unity-webgl-logo"></div>
+        <div id="unity-fullscreen-button"></div>
+        <div id="unity-build-title">RealmOfEldoria</div>
       </div>
     </div>
     <script>
@@ -62,7 +63,7 @@
         codeUrl: buildUrl + "/RealmOfEldoria.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "Forgotten tales",
+        productName: "RealmOfEldoria",
         productVersion: "1",
         showBanner: unityShowBanner,
       };
