--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Realm Of Eldoria</title>
-    <link rel="shortcut icon" href="TemplateData/Vixie.png">
+    <link rel="shortcut icon" href="TemplateData/brickWall.png">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
@@ -35,10 +35,8 @@
       </div>
       <div id="unity-warning"> </div>
       <div id="unity-footer">
-        <button id="switchWebGL">Switch to WebGL 1.0</button>
-        <a id="webGLinfo"><u>What is WebGL?</u></a>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">2009-901 | Realm Of Eldoria | V3.1.1</div>
+        <div id="unity-build-title">2009-901 | Realm Of Eldoria | V3.1.2</div>
       </div>
     </div>
     <script>
